# obsidianexport

./: README.md  Taskfile.yml  pyproject.toml
obsidianexport/: __init__.py
